# Koru

./: .gitignore  CODE_OF_CONDUCT  README.md  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
applications/: models.py
core/: models.py
docker/: README.md
koru/: asgi.py  koru_settings-example.py  model.py  settings.py  urls.py  utils.py  wsgi.py
moderation/: models.py  utils.py
static/css/: input.css
templates/: .keep
users/: models.py
